--- a/Lab4/Untitled.ipynb
+++ b/Lab4/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 183,
    "id": "e0e512d7",
    "metadata": {},
    "outputs": [
@@ -11,26 +11,26 @@
      "output_type": "stream",
      "text": [
       "Using matplotlib backend: Qt5Agg\n",
-      "K为2时的簇点 : [[ 3.53674208 -2.97485091]\n",
-      " [ 8.10748794  2.53925376]]\n",
-      "K为3时的簇点 : [[ 3.01643838  3.23378744]\n",
+      "K为2时的簇心 : [[ 2.97401776  3.08544153]\n",
+      " [ 9.05365928 -3.04722923]]\n",
+      "K为3时的簇心 : [[11.97182496 -0.09600277]\n",
+      " [ 5.82030816 -5.99520832]\n",
+      " [ 3.00912649  3.21433944]]\n",
+      "K为4时的簇心 : [[ 6.08536866 -6.24439437]\n",
       " [11.97182496 -0.09600277]\n",
-      " [ 5.78821799 -5.97238169]]\n",
-      "K为4时的簇点 : [[11.97182496 -0.09600277]\n",
-      " [ 0.66313512  0.77343321]\n",
-      " [ 5.99979966 -6.12394601]\n",
-      " [ 4.7580325   4.87831211]]\n",
-      "K为5时的簇点 : [[ 5.04239754 -5.33346967]\n",
-      " [ 0.63473555  0.77987461]\n",
-      " [ 4.73688796  4.87327592]\n",
-      " [ 7.47381965 -7.28666507]\n",
-      " [11.97951732 -0.09408235]]\n",
-      "K为6时的簇点 : [[12.35444762  0.3062197 ]\n",
-      " [ 4.81927893  4.95929588]\n",
-      " [ 4.10576927 -6.63342982]\n",
-      " [ 0.76446285  0.86469963]\n",
-      " [10.60656748 -1.44500429]\n",
-      " [ 7.02882825 -5.91764349]]\n"
+      " [ 4.40416751  4.71600321]\n",
+      " [ 0.74258323  0.2501431 ]]\n",
+      "K为5时的簇心 : [[ 0.62067642  1.42736878]\n",
+      " [ 6.29324453 -6.33198019]\n",
+      " [ 4.85282581  4.97381437]\n",
+      " [11.97182496 -0.09600277]\n",
+      " [ 2.24405066 -2.74520724]]\n",
+      "K为6时的簇心 : [[ 4.9350585   5.07635719]\n",
+      " [ 2.05276141  1.97173054]\n",
+      " [ 7.35234937 -7.34322259]\n",
+      " [ 5.03822514 -5.22636117]\n",
+      " [-0.30265943  0.10342242]\n",
+      " [11.97951732 -0.09408235]]\n"
      ]
     }
    ],
@@ -41,51 +41,50 @@
     "\n",
     "data = np.loadtxt('Lab4.dat')\n",
     "\n",
-    "def calSSE(X, cidx, K) :\n",
+    "def calSSE(X, cidx, ctrs) :\n",
     "    SSE = 0\n",
-    "    for i in range(K) :\n",
-    "        Ci = np.mean(X[np.where(cidx == i + 1), 0])\n",
-    "        SSE += np.sum(np.square(X[np.where(cidx == i + 1), 0] - Ci))\n",
+    "    for i, ctr in enumerate(ctrs) :\n",
+    "        SSE += np.sum(np.square(X[np.where(cidx == i + 1)] - ctr))\n",
     "\n",
     "    return SSE / X.shape[0]\n",
     "\n",
     "def kmeans(X, K) :\n",
     "    center_point = []\n",
     "    for i in range(K) :\n",
-    "        point_x = np.random.uniform(np.min(X, axis = 0)[0], np.max(X, axis = 0)[0])\n",
+    "        point_x = np.random.uniform(np.min(X, axis = 0)[0], np.max(X, axis = 0)[0])#随机初始化簇点\n",
     "        point_y = np.random.uniform(np.min(X, axis = 0)[1], np.max(X, axis = 0)[1])\n",
     "        center_point.append([point_x, point_y])\n",
     "    center_point = np.array(center_point)\n",
-    "    cluter = np.zeros(X.shape[0]).astype(np.int32)\n",
+    "    cluter = np.zeros(X.shape[0]).astype(np.int32)#建立簇类初始化为0\n",
     "    item = 5\n",
-    "    while item > 0:\n",
-    "        for i in range(X.shape[0]) :\n",
+    "    while item > 0:#迭代\n",
+    "        for i in range(X.shape[0]) :#计算每一组数据与每个簇点的欧氏距离，距离最小者记为此组数据为所标类别\n",
     "            distance = center_point\n",
-    "            distance = np.sum(np.square(distance - X[i]), axis = 1)\n",
-    "            cluter[i] = np.argmin(distance) + 1\n",
+    "            distance = np.sum(np.square(distance - X[i]), axis = 1)#注意x， y都计算所以要求和，注意求和维度\n",
+    "            cluter[i] = np.argmin(distance) + 1#最小值的下标\n",
     "    \n",
     "        New_center_point = np.zeros((K, 2))\n",
     "        \n",
-    "        for i in range(K) :\n",
+    "        for i in range(K) :#更新簇点，取每一簇类的平均值作为新簇点\n",
     "            New_center_point[i][0] = np.mean(X[np.where(cluter == i + 1), 0])\n",
     "            New_center_point[i][1] = np.mean(X[np.where(cluter == i + 1), 1])\n",
-    "        if (New_center_point - center_point < 1e-7).all() :\n",
+    "        if (New_center_point - center_point < 1e-7).all() :#当新簇点与之前的簇点近似相等时退出迭代\n",
     "            break\n",
     "        center_point = New_center_point\n",
     "        item -= 1\n",
     "\n",
-    "    return cluter, center_point\n",
+    "    return cluter, center_point#返回每一组数据所对应的簇类和簇点\n",
     "\n",
     "SSE = []\n",
     "for K in range(2, 7) :\n",
     "    cidx, ctrs = kmeans(data, K)\n",
-    "    print(f'K为{K}时的簇点 : {ctrs}')\n",
-    "    SSE.append(calSSE(data, cidx, K))\n",
+    "    print(f'K为{K}时的簇心 : {ctrs}')\n",
+    "    SSE.append(calSSE(data, cidx, ctrs))#手肘法求最好分类的K值\n",
     "\n",
     "mark = [ 'r', 'c', 'y', 'k', 'm', 'g', 'g']\n",
     "plt.ion()\n",
     "for i in range(K) :\n",
-    "    plt.scatter(data[np.where(cidx == i + 1), 0], data[np.where(cidx == i + 1), 1], marker = '.', color = mark[i])\n",
+    "    plt.scatter(data[np.where(cidx == i + 1), 0], data[np.where(cidx == i + 1), 1], marker = '.', color = mark[i])#作图\n",
     "plt.title('K is 6')\n",
     "plt.figure()\n",
     "plt.plot(list(range(2, 7)), SSE, '+--')\n",
