--- a/Lab4/K_means_clustering.ipynb
+++ b/Lab4/K_means_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 42,
    "id": "e0e512d7",
    "metadata": {},
    "outputs": [
@@ -11,26 +11,29 @@
      "output_type": "stream",
      "text": [
       "Using matplotlib backend: Qt5Agg\n",
-      "K为2时的簇心 : [[ 2.97401776  3.08544153]\n",
-      " [ 9.05365928 -3.04722923]]\n",
-      "K为3时的簇心 : [[11.97182496 -0.09600277]\n",
-      " [ 5.82030816 -5.99520832]\n",
-      " [ 3.00912649  3.21433944]]\n",
-      "K为4时的簇心 : [[ 6.08536866 -6.24439437]\n",
+      "K为2时的簇心 : \n",
+      " [[ 9.05365928 -3.04722923]\n",
+      " [ 2.97401776  3.08544153]]\tK为3时的簇心 : \n",
+      " [[ 5.78821799 -5.97238169]\n",
       " [11.97182496 -0.09600277]\n",
-      " [ 4.40416751  4.71600321]\n",
-      " [ 0.74258323  0.2501431 ]]\n",
-      "K为5时的簇心 : [[ 0.62067642  1.42736878]\n",
-      " [ 6.29324453 -6.33198019]\n",
-      " [ 4.85282581  4.97381437]\n",
+      " [ 3.01643838  3.23378744]]\tK为4时的簇心 : \n",
+      " [[ 6.21760909e+00 -6.02396711e+00]\n",
+      " [ 1.27908617e+00  1.27257925e+00]\n",
+      " [ 5.07270221e+00  5.20906765e+00]\n",
+      " [ 1.20605739e+01  7.20853242e-03]]\t\n",
+      "\n",
+      "K为5时的簇心 : \n",
+      " [[ 4.31774461  4.57045835]\n",
+      " [ 5.79520553  5.7316593 ]\n",
+      " [ 0.73262038  0.74621755]\n",
       " [11.97182496 -0.09600277]\n",
-      " [ 2.24405066 -2.74520724]]\n",
-      "K为6时的簇心 : [[ 4.9350585   5.07635719]\n",
-      " [ 2.05276141  1.97173054]\n",
-      " [ 7.35234937 -7.34322259]\n",
-      " [ 5.03822514 -5.22636117]\n",
-      " [-0.30265943  0.10342242]\n",
-      " [11.97951732 -0.09408235]]\n"
+      " [ 6.01151368 -6.1527359 ]]\tK为6时的簇心 : \n",
+      " [[ 4.60421415 -5.87630225]\n",
+      " [ 7.53427794 -6.35780961]\n",
+      " [ 0.29996367 -0.49850117]\n",
+      " [ 1.29641873  2.21214444]\n",
+      " [ 4.91943072  5.0257264 ]\n",
+      " [11.97784739 -0.09230654]]\t"
      ]
     }
    ],
@@ -51,7 +54,7 @@
     "def kmeans(X, K) :\n",
     "    center_point = []\n",
     "    for i in range(K) :\n",
-    "        point_x = np.random.uniform(np.min(X, axis = 0)[0], np.max(X, axis = 0)[0])#随机初始化簇点\n",
+    "        point_x = np.random.uniform(np.min(X, axis = 0)[0], np.max(X, axis = 0)[0])#随机初始化簇心\n",
     "        point_y = np.random.uniform(np.min(X, axis = 0)[1], np.max(X, axis = 0)[1])\n",
     "        center_point.append([point_x, point_y])\n",
     "    center_point = np.array(center_point)\n",
@@ -65,27 +68,36 @@
     "    \n",
     "        New_center_point = np.zeros((K, 2))\n",
     "        \n",
-    "        for i in range(K) :#更新簇点，取每一簇类的平均值作为新簇点\n",
+    "        for i in range(K) :#更新簇点，取每一簇类的平均值作为新簇心\n",
     "            New_center_point[i][0] = np.mean(X[np.where(cluter == i + 1), 0])\n",
     "            New_center_point[i][1] = np.mean(X[np.where(cluter == i + 1), 1])\n",
     "        if (New_center_point - center_point < 1e-7).all() :#当新簇点与之前的簇点近似相等时退出迭代\n",
     "            break\n",
     "        center_point = New_center_point\n",
     "        item -= 1\n",
-    "\n",
     "    return cluter, center_point#返回每一组数据所对应的簇类和簇点\n",
     "\n",
     "SSE = []\n",
+    "mark = [ 'r', 'c', 'y', 'k', 'm', 'g']\n",
+    "\n",
+    "plt.ion()\n",
     "for K in range(2, 7) :\n",
     "    cidx, ctrs = kmeans(data, K)\n",
-    "    print(f'K为{K}时的簇心 : {ctrs}')\n",
+    "    ctrs_set.append(ctrs)\n",
+    "    print(f'K为{K}时的簇心 : \\n {ctrs}', end = '\\t')\n",
+    "    if K == 4 :\n",
+    "        print('\\n')\n",
     "    SSE.append(calSSE(data, cidx, ctrs))#手肘法求最好分类的K值\n",
+    "    \n",
+    "    plt.subplot(2, 3, K - 1)\n",
+    "    for i in range(K) :\n",
+    "        plt.scatter(data[np.where(cidx == i + 1), 0], data[np.where(cidx == i + 1), 1], marker = '.', color = mark[i])#作图\n",
+    "    plt.scatter(ctrs[ : , 0], ctrs[ : , 1], marker = '*', color = 'g')#做出簇心\n",
+    "    plt.title(f'K is {K}')\n",
+    "    plt.tight_layout()\n",
+    "    plt.xticks([]), plt.yticks([])\n",
     "\n",
-    "mark = [ 'r', 'c', 'y', 'k', 'm', 'g', 'g']\n",
-    "plt.ion()\n",
-    "for i in range(K) :\n",
-    "    plt.scatter(data[np.where(cidx == i + 1), 0], data[np.where(cidx == i + 1), 1], marker = '.', color = mark[i])#作图\n",
-    "plt.title('K is 6')\n",
+    "    \n",
     "plt.figure()\n",
     "plt.plot(list(range(2, 7)), SSE, '+--')\n",
     "plt.ioff()\n",
